docs: add install command

--- a/readme.hbs
+++ b/readme.hbs
@@ -7,6 +7,10 @@ mongoose-plugin-created
 
 A [mongoose.js](https://github.com/LearnBoost/mongoose/) plugin to create a document creation timestamp with optional user identifier.
 
+## Installation
+
+`npm i --save mongoose-plugin-created`
+
 ## API Reference
 {{#module name="mongoose-plugin-created"~}}
 {{>body~}}
